Updated layout to fit nicely and size with screen, and password locking

--- a/site/footer.htm
+++ b/site/footer.htm
@@ -1,1 +1,1 @@
-<span style='float: left; color: white;'>Registered in England: 4118095. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Copyright &copy; 2015</span><span style='float: right; margin-right: 145px'><a href='/contactus.htm'>Contact Us</a></span>
+<div style='float: left; color: white;'>Registered in England: 4118095</div><div style='float: right; margin-right: 1%; width: 10%'><a href='/contactus.php'>Contact Us</a></div>
