--- a/site/menu2.htm
+++ b/site/menu2.htm
@@ -1,3 +1,4 @@
 <table style='cursor: pointer'><tr>
 <td class='menu' id='home' onClick='location.href="index.php"'>Home</td>
+<td class='menu' id='Quick' onMouseOver='menuTimeout()' onClick='location.href="quick.php"'>Quick Test</td>
 </tr></table>
